# rocket-detection

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test.py  vcpkg.C.CodeLibraries.vcpkg.1.0.0.nupkg  vcpkg.json
src/: extract_frames.cpp  extract_frames.h  extract_frames_test.cpp  extract_frames_test.h  extract_subtitles_test.cpp  main.cpp  utils.cpp  utils.h
